<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eCigarette Refiller</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings ...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="zero_to_nine">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_edit_refill">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="successfully_exported">Successfully exported</string>
    <string name="cannot_export">Cannot export</string>
    <string name="menu_import">Import ...</string>
    <string name="menu_export">Export ...</string>
    <string name="export_to_gdrive">to GDrive</string>
    <string name="export_to_csv">to csv</string>
    <string name="import_from_csv">from csv</string>
    <string name="import_from_gdrive">from GDrive</string>
    <string name="backup_gdrive">Backup in GDrive</string>
    <string name="restore_gdrive">Restore from GDrive</string>
    <string name="backup_created">Backup created</string>

</resources>
