<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" >
        <menu>
            <item android:title="@string/menu_import">
                <menu>
                    <item android:id="@+id/action_import_csv" android:title="@string/import_from_csv"/>
                    <item android:id="@+id/action_import_gdrive" android:title="@string/import_from_gdrive"/>
                </menu>
            </item>

            <item android:title="@string/menu_export">
                <menu>
                    <item android:id="@+id/action_export_csv" android:title="@string/export_to_csv"/>
                    <item android:id="@+id/action_export_gdrive" android:title="@string/export_to_gdrive"/>
                </menu>
            </item>

            <item android:title="@string/backup_gdrive" android:id="@+id/action_backup_gdrive"/>
            <item android:title="@string/restore_gdrive" android:id="@+id/action_restore_gdrive"/>
        </menu>
    </item>

    <item android:id="@+id/action_exit" android:title="Exit"/>
</menu>
